Archive/4a73d0c3f2d952a7c2f8b92d4381156d-61c3814520a8d4318f681038dc4b4da7/output
main.cpp: In function 'int main()':
main.cpp:13:12: error: call of overloaded 'foo(<brace-enclosed initializer list>)' is ambiguous
     foo({1});
            ^
main.cpp:13:12: note: candidates are:
main.cpp:9:6: note: void foo(a)
 void foo(a) {}
      ^
main.cpp:10:6: note: void foo(b)
 void foo(b) {}
      ^
